# rmlui-bgfx

./: .clang-format  .gitignore  AGENTS.md  BOUNDED_TRANSFORMED_LAYERS_IMPLEMENTATION_PLAN.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: CompileRmlUiBgfxShaders.cmake  RmlUiBgfxShaders.cmake  rmlui_bgfxConfig.cmake.in
docs/: OPTIMIZED_RENDERER_ARCHITECTURE.md  README.md
include/rmlui_bgfx/: config.hpp  precompiled_material_shader_provider.hpp  render_interface.hpp
samples/: CMakeLists.txt  README.md  RmlUi_Backend_SDL_BGFX.cpp
samples/effects_probe/: README.md
samples/effects_probe/data/: 00_baseline.rml  00_shader_time.rml  01_clip_body.rml  01_shader_dimensions.rml  02_boxshadow_trail.rml  02_shader_dpi.rml  03_boxshadow_blur.rml  03_shader_mouse.rml  04_filters.rml  04_shader_combined.rml  05_backdrop_filter.rml  05_scroll_root_filter.rml  06_mask_image.rml  06_scroll_only.rml  07_scroll_stress.rml  07_scroll_transform_only.rml  08_scroll_filter_only.rml  09_scroll_shadow_only.rml  10_scroll_transform_shadow.rml  11_boxshadow_outer_only.rml  11_scroll_transform_filter.rml  12_boxshadow_inset.rml  12_scroll_transform_shadow_filter.rml  13_effects_scroll_baseline.rml  13_scroll_transform_shadow_filter_single.rml  14_effects_noop_filter_scroll.rml  15_effects_transform_filter_scroll.rml  16_effects_shadow_overflow_scroll.rml  17_effects_real_filters_scroll.rml  18_effects_outer_blur_scroll.rml  19_effects_outer_dropshadow_scroll.rml  20_effects_backdrop_scroll.rml  21_effects_scroll_mid_bottom.rml  22_effects_no_wrapper_filter_control.rml  23_effects_stripped_full_slice.rml  24_effects_soft_shadow_filtered.rml  25_effects_soft_shadow_unfiltered.rml  26_effects_trail_shadow_filtered.rml  27_effects_trail_shadow_unfiltered.rml  28_effects_soft_shadow_no_transform_filtered.rml  (+5 more)
samples/effects_probe/src/: main.cpp
scripts/: run-tests.sh
shaders/bgfx/: fs_rmlui.sc  fs_rmlui_blur.sc  fs_rmlui_color_matrix.sc  fs_rmlui_composite.sc  fs_rmlui_composite_filter.sc  fs_rmlui_drop_shadow.sc  fs_rmlui_gradient.sc  fs_rmlui_mask_multiply.sc  fs_rmlui_material_abi_combined.sc  fs_rmlui_material_abi_dimensions.sc  fs_rmlui_material_abi_dpi.sc  fs_rmlui_material_abi_mouse.sc  fs_rmlui_material_abi_time.sc  fs_rmlui_opacity.sc  varying.def.sc  vs_rmlui.sc  vs_rmlui_blur.sc  vs_rmlui_composite.sc
src/: bounds.cpp  draw.cpp  filters.cpp  filters_optimized.cpp  layers.cpp  layers_optimized.cpp  pass_scheduler.cpp  passes.cpp  planning.cpp  precompiled_material_shader_provider.cpp  reference_renderer.cpp  render_interface.cpp  target_cache.cpp
src/private/: rmlui_bgfx_bounds.hpp  rmlui_bgfx_draw.hpp  rmlui_bgfx_filter_paths.hpp  rmlui_bgfx_filters.hpp  rmlui_bgfx_layer_composite_helpers.hpp  rmlui_bgfx_layer_paths.hpp  rmlui_bgfx_layers.hpp  rmlui_bgfx_mapping.hpp  rmlui_bgfx_pass_scheduler.hpp  rmlui_bgfx_passes.hpp  rmlui_bgfx_planning.hpp  rmlui_bgfx_reference_renderer.hpp  rmlui_bgfx_target_cache.hpp  rmlui_bgfx_types.hpp
tests/: rmlui_conservative_mask_bounds_tests.cpp  rmlui_layer_system_tests.cpp  rmlui_render_bounds_tests.cpp  rmlui_render_interface_lifecycle_tests.cpp  rmlui_render_pass_scheduler_tests.cpp  rmlui_render_planning_tests.cpp
